tests/negative/gold/type4_test.gold
tests/negative/type4_test.toit:6:12: error: Unresolved type: 'NonExisting'
  foo x -> NonExisting:
           ^~~~~~~~~~~
Compilation failed.
